# rlm-fractal

./: .gitignore  build_fractal_db.py  fetch_pdfs.py  pyproject.toml  serve.py
fractal/: __init__.py
fractal/graph/: __init__.py  cross_reference.py  document_graph.py
fractal/parser/: __init__.py  batch_parse.py  pdf_parser.py  structure_classifier.py
ui/: package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  index.css
ui/src/api/: client.ts
ui/src/components/: CitationGraph.tsx  DocumentExplorer.tsx  PaperBrowser.tsx  PaperDetailDrawer.tsx  SqlConsole.tsx
