# rlm-fractal — Fractal graph system for toxicogenomics knowledge base.
#
# Builds a three-level graph: citation network (Level 1) → document structure (Level 2)
# → queryable content (Level 3). Starts from the BMDX knowledge base (4,961 papers,
# 22K genes, 9.7K claims) and 1,410 downloaded open-access PDFs.

[project]
name = "rlm-fractal"
version = "0.1.0"
description = "Fractal graph system layering citation network, document structure, and content queries over a toxicogenomics knowledge base"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fractal"]
